2018-12-28  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/Resources/journals.qrc: Added
	icon_journals.svg to journals program. Updated
	designer/ui_JournalEntry.ui. Added RESOURCE_FILE to Makefile.am.

	* Tools/python/aabooks/ajbbook/Resources/ajb.qrc: Changed name of
	ajb.qrc, updated designer/ui_BookEntry.ui and Makefile.am.

2018-12-08  Jim Fowler  <jrf@biblion>

	* aabooks: Merged changes from branch aabooks to master.  This
	should pick up the changes to make the python code more compliant
	with pylint and PEP-8.  Still need to install and test.

	* Tools/python/aabooks/journal/journalwindow.py: Started to make
	a dictionary for instance attributes but stopped before finishing.
	This should be done in phase four when we refactor the structure
	of the programs. For right now the python programs are mostly
	compliant with PEP-8 and pylint.

2018-12-05  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalwindow.py
	(JournalWindow._save_file): Replace all single character variable
	names.  Made most functions for menus and buttons as semi-private
	function i.e. _func().  Need to replace non-public instance attributes
	with a dictionary of attributes.

2018-12-04  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalwindow.py: Tested
	the journal program.  Made three corrections to function
	call to replace camelCase with snake_case.

2018-12-02  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/journalwindow.py: Cleaned up
	journalentry.py, journalfile.py, journalmenus.py, jsearch.py,
	and journalwindow.py.  Some files still need work.

2018-11-30  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook: Test and fix function
	names in ajbbooks files.  The code correctly handles most
	actions now.

2018-11-26  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/: began PIP-8 compliance
	in ajbbook. Rename files in camel case to snake case.

2018-11-25  Jim Fowler  <jrf@biblion>
